--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -70,11 +70,11 @@ jobs:
 
       - name: SonarCloud Scan
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.TOKEN_EXO1_SONAR }}
         run: |
           mvn clean verify verify -DskipTests -Dpmd.skip=true sonar:sonar \
-            -Dsonar.projectKey=macka2022_spring_portfolio_api_service1 \
-            -Dsonar.organization=macka2022 \
+            -Dsonar.projectKey=cidevopsgithubaction \
+            -Dsonar.organization=ciDevopsGithubAction \
             -Dsonar.host.url=https://sonarcloud.io \
             -Dsonar.branch.name=${{ github.ref_name }}
 
